<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation</name>
  <version>10.1.0</version>
  <description>
    Drone Navigation Stack
  </description>
  <maintainer email="eslaghuis@gmail.com">Eric Slaghuis</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav_drone_bt_navigator</exec_depend>
  <exec_depend>nav_drone_controller</exec_depend>
  <exec_depend>nav_drone_core</exec_depend>
  <exec_depend>nav_drone_dumb_planer</exec_depend>
  <exec_depend>nav_drone_mpc_controller</exec_depend>
  <exec_depend>nav_drone_msgs</exec_depend>
  <exec_depend>nav_drone_planner</exec_depend>
  <exec_depend>nav_drone_util</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
